--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^4.0.3
   fluttertoast: ^7.1.6
+  dio: ^3.0.10
 
 dev_dependencies:
   flutter_test:
