--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
   flutter_screenutil: ^4.0.3
+
   fluttertoast: ^7.1.6
+
   dio: ^3.0.10
+  cookie_jar: ^1.0.1
+  dio_cookie_manager: ^1.0.0
+
+  localstorage: ^3.0.6+9
+
+  crypto: ^3.0.0
 
 dev_dependencies:
   flutter_test:
