--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
 
   # localstorage: ^3.0.6+9
   shared_preferences: ^2.0.3
+  cached_network_image: ^2.5.1
+
+  intl: ^0.17.0
+
+  flutter_easyrefresh: ^2.1.8
 
   crypto: ^3.0.0
 
