--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   # 屏幕适配
   flutter_screenutil: ^4.0.4
 
+  # 提示 toast
+  fluttertoast: ^3.1.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
