--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   dio_cookie_manager: ^1.0.0
 
   # storage
-  localstorage: ^3.0.1+4
+  # localstorage: ^3.0.1+4
+  shared_preferences: ^0.5.6+3
 
   # sha
   crypto: ^2.1.3
@@ -86,6 +87,9 @@ flutter:
       fonts:
         - asset: assets/fonts/Montserrat-SemiBold.ttf
           weight: 600
+    - family: Iconfont
+      fonts:
+        - asset: assets/fonts/iconfont.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
