添加首页布局,主要是添加了首页分类,推荐阅读,频道,新闻列表,邮件,对应的颜色值,对应的inputwidgets更新,对应的http工具函数更新,对应的新闻,标签实体更新添加json,添加了缓存,日期格式处理,easyrefresh

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,15 @@ dependencies:
   # sha
   crypto: ^2.1.3
 
+  # 日期格式
+  intl: ^0.16.1
+
+  # ui
+  flutter_easyrefresh: ^2.1.0
+
+  # cache
+  cached_network_image: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
