--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   cupertino_icons: ^1.0.0
 
   # 屏幕适配
-  flutter_screenutil: ^4.0.4
+  # flutter_screenutil: ^4.0.4
+  flutter_screenutil: ^1.0.2
 
   # 提示 toast
   fluttertoast: ^3.1.3
